navbar running on all pages

--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,17 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="logo192.png" />
+  <link rel="shortcut icon" type="image/png" href="../src/images/devs-link-solo.png" />
 
   <!-- Bootstrap and Our Assorted Links-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+  <!-- Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Josefin+Sans|Open+Sans&display=swap" rel="stylesheet">
+
+  <!-- manifest.json provides metadata used when your web app is installed on a
+  user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+  -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
